# gSLICr

./: CMakeLists.txt  demo.cpp  opencv_basic.h  opencv_stl.h
Fuzzy/: CMakeLists.txt  Fuzzy.cpp  Fuzzy.h  FuzzyMethod.cpp  FuzzyMethod.h
MY_SDK_LIB/: Base.cpp  Base.h  CMakeLists.txt  ImgProcAirview.cpp  ImgProcAirview.hpp  ImgProcBase.cpp  ImgProcBase.hpp  ImgProcCalibrate.cpp  ImgProcCalibrate.hpp  ImgProcCluster.cpp  ImgProcCluster.hpp  TimeMeasure.cpp  TimeMeasure.hpp
MemcpyCv_gSLICr/: CMakeLists.txt  MemcpyCv_gSLICr.cpp  MemcpyCv_gSLICr.hpp
OPENCV_QT_SDK_LIB/: CMakeLists.txt  OpencvQtBase.cpp  OpencvQtBase.h
ORUtils/: MemoryBlock.h  Vector.h
QT_SDK_LIB/: CMD_CTRL.hpp  CMD_CTRL_DATA.hpp  CMakeLists.txt  QBase.cpp  QBase.h  QImage_Q.cpp  QImage_Q.hpp  QtTcpClientBase.hpp  QtTcpClientCmdCtrl.hpp
ROS/: autolabor.2.5.md
ROS_LIB/: CMakeLists.txt  ROSBasic.cpp  ROSBasic.hpp  advertise_a_topic.cpp  advertise_a_topic.hpp  geometry_msgs_Pose.cpp  geometry_msgs_Pose.hpp  geometry_msgs_PoseStamped.cpp  geometry_msgs_PoseStamped.hpp  geometry_msgs_Transform.cpp  geometry_msgs_Transform.hpp  geometry_msgs_TransformStamped.cpp  geometry_msgs_TransformStamped.hpp  rosbridge_v2_0_protocol.cpp  rosbridge_v2_0_protocol.hpp  sensor_msgs_ChannelFloat32.cpp  sensor_msgs_ChannelFloat32.hpp  sensor_msgs_PointCloud.cpp  sensor_msgs_PointCloud.hpp  std_msgs_Header.cpp  std_msgs_Header.hpp  tf_tfMessage.cpp  tf_tfMessage.hpp
SGV/: CMakeLists.txt  SGV_CFG.h  SGV_CFG_ARITHMETIC.cpp  SGV_CFG_ARITHMETIC.h  SGV_CFG_DBG.cpp  SGV_CFG_DBG.h  SGV_GLOBAL.cpp  SGV_GLOBAL.h  SGV_Method.cpp  SGV_Method.h
SGVBaseCode/: CMakeLists.txt  ImageSaveProc.cpp  ImageSaveProc.h
TRAFFIC_SIGN_LIB/: CMakeLists.txt  TrafficSignMethod.hpp  TrafficSignMethodBase.cpp  TrafficSignMethodBase.hpp  TrafficSignMethodHu.cpp  TrafficSignMethodHu.hpp  TrafficSignParam.hpp  TrafficSignProperty.cpp  TrafficSignProperty.hpp  TrafficSignPropertyBase.cpp  TrafficSignPropertyBase.hpp  TrafficSignPropertyHu.cpp  TrafficSignPropertyHu.hpp  TrafficSignResult.cpp  TrafficSignResult.hpp  TrafficSignTemplete.cpp  TrafficSignTemplete.hpp
cluster/: cluster.md  cluster.similar.matrix.md  fuzzy.md  fuzzy.one.md  vertical.apparent.horizon.split.md
cmake/: FindQT.cmake  LinuxPrepare.cmake  SetCUDA.cmake
cuda_Lib/: CMakeLists.txt  CUDA_Code.cpp  CUDA_Code.h  CUDA_Code_LAB.cpp  CUDA_Code_LAB.h  CUDA_Code_LAB_Int.h  HarrWaveletKernel.cu  SlicKernel.cu  cuda_base.h  fuzzy.cu
develop.env/ubuntu64/: .bashrc
develop.env/x64/: boost.env.64.txt  opencv.env.64.txt  qt.env.64.txt
develop.env/x86/: opencv.env.txt  qt.env.txt
gSLICr_Lib/: CMakeLists.txt  gSLICr.Lib.md  gSLICr_defines.h
gSLICr_Lib/engines/: gSLICr_core_engine.h  gSLICr_core_engine_cluster.cpp  gSLICr_core_engine_cluster.h  gSLICr_dbg.h  gSLICr_seg_engine.cpp  gSLICr_seg_engine.h  gSLICr_seg_engine_GPU.cu  gSLICr_seg_engine_GPU.h  gSLICr_seg_engine_GPU_cluster.cu  gSLICr_seg_engine_GPU_cluster.h  gSLICr_seg_engine_cluster.cpp  gSLICr_seg_engine_cluster.h  gSLICr_seg_engine_cluster_base.h  gSLICr_seg_engine_map.cpp  gSLICr_seg_engine_map.h  gSLICr_seg_engine_shared.h
main.nav/: CMakeLists.txt  cfg.svg.arithmetic.xml  cfg.svg.dbg.xml  main_nav.cpp
main.nav/doc/: opencv4arm.md
main.nav/xml/: cfg.svg.arithmetic.400.xml  cfg.svg.arithmetic.human.leg.xml  cfg.svg.arithmetic.yjkj.909.xml  cfg.svg.dbg.400.xml  cfg.svg.dbg.yjkj.909.xml
nav.autolabor/: CMakeLists.txt  CarHardware.cpp  CarHardware.h  DriveAuto.cpp  DriveAuto.h  DriveHardware.cpp  DriveHardware.h  DrivePolicy.cpp  DrivePolicy.h  General.cpp  General.hpp  ImageProcCalibration.cpp  ImageProcCalibration.hpp  ImageProcTopDown.cpp  ImageProcTopDown.hpp  ImageProcTopDownSVG.cpp  ImageProcTopDownSVG.hpp  ImageProcTopDownTrafficSign.cpp  ImageProcTopDownTrafficSign.hpp  PreProcImageOrg.cpp  PreProcImageOrg.h  PreProcImageSvg.cpp  PreProcImageSvg.h  README.md  RunCmd.cpp  RunCmd.h  SVG_Proc.cpp  SVG_Proc.h  SvgProcImage.cpp  SvgProcImage.h  SwsContexCore.cpp  SwsContexCore.h  SwsContexSafe.cpp  SwsContexSafe.h  cloudpanel.cpp  cloudpanel.h  colorprogressbar.cpp  colorprogressbar.h  main.cpp  mainwindow.cpp  (+19 more)
nav.autolabor.doc/plan.2019/: nav.weighted.average.md
nav.autolabor.doc/plan.2020/: Nav.Plan.md  Nav.md
nav.autolabor.doc/plan.2020/Map/: map.indoor.md  map.word.md
nav.autolabor.doc/plan.2020/Nav.Plan/: Nav.Indoor.Cruise.A.md  Nav.Indoor.Cruise.B.develop.md  Nav.Indoor.Cruise.B.md
nav.autolabor.doc/plan.2020/Nav.Plan/Nav.Indoor.Cruise.A/: Nav.Indoor.Cruise.A.md
nav.autolabor.doc/plan.2020/Nav.Plan/Nav.Indoor.Cruise.B/: Nav.Indoor.Cruise.B.PCB.md  Nav.Indoor.Cruise.B.develop.cfg.md  Nav.Indoor.Cruise.B.develop.md  Nav.Indoor.Cruise.B.develop.ros.md  Nav.Indoor.Cruise.B.develop.title.md  Nav.Indoor.Cruise.B.md
nav.autolabor.doc/plan.2020/ROS.Libraries/: ROS.Message.md  ROS.navigation.md
nav.autolabor.doc/plan.2020/hardware.module/Raspberry Pi/: PowerSupply.md  RaspberryPi2b-upgrade-4b.md  RaspberryPi3b-upgrade-4b.md  material.export.md
nav.autolabor.doc/plan.2020/hardware.module/motor/: JGB37-520-12V-59rpm.md
nav.autolabor.x86_64/hardware.module/: ros.hardware.devel.android.md  ros.hardware.devel.md
nav.autolabor/cfg.xml/: cfg.mainwindow.xml  cfg.svg.arithmetic.xml  cfg.svg.arithmetic.yjkj.909.xml  cfg.svg.dbg.xml
nav.autolabor/ffmpeg/: README.md
nav.omark.doc/: nav.omark.protocol.md
recognize.traffic.sign/: CMakeLists.txt  TrafficSignMethod.cpp  TrafficSignMethod.hpp  TrafficSignMethodBase.cpp  TrafficSignMethodBase.hpp  TrafficSignMethodHu.cpp  TrafficSignMethodHu.hpp  TrafficSignParam.cpp  TrafficSignParam.hpp  TrafficSignPropertyBase.cpp  TrafficSignPropertyBase.hpp  TrafficSignPropertyHu.cpp  TrafficSignPropertyHu.hpp  TrafficSignTemplete.cpp  TrafficSignTemplete.hpp  main_traffic_sign.cpp  traffic.sign.hu.rotate.md  traffic.sign.pre.md
