#cmake最低版本需求，不加入此行会受到警告信息
CMAKE_MINIMUM_REQUIRED(VERSION 3.8.1)
###############################################################################
C11_Config()  
ConfigOpenCv()
###############################################################################

###############################################################################
SET(FUZZY_SDK_SRCS

	Fuzzy.cpp
	FuzzyMethod.cpp
	
	)
##############################################################################	
ADD_LIBRARY(FUZZY   STATIC    ${FUZZY_SDK_SRCS})
###############################################################################