CMAKE_MINIMUM_REQUIRED(VERSION 3.8.1)
###############################################################################
C11_Config() 
###############################################################################
ConfigOpenCv()
###############################################################################

###############################################################################
SET(MemcpyCv_gSLICr_SRCS
			MemcpyCv_gSLICr.cpp
		)
###############################################################################
SET(MemcpyCv_gSLICr_LIB
			gSLICr_lib
			MY_SDK_LIB
		)
###############################################################################
ADD_LIBRARY(MemcpyCv_gSLICr   STATIC    ${MemcpyCv_gSLICr_SRCS})
###############################################################################
TARGET_LINK_LIBRARIES(MemcpyCv_gSLICr 	${MemcpyCv_gSLICr_LIB})
##############################################################################

##############################################################################
